This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
3/15/17: Properly initialized image shift values when switching to a low dose
imaging state (In 3.6).

3/13/17: Added script commands to change a Navigator item's registration and
to shift items by a given number of microns.

3/13/17: SEM_3-6-4
3/13/17: Added properties MaximumSlitWidth to set the maximum width for a GIF
and GIFadjustsForSlitWidth to indicate that SerialEM does not need to adjust
energy shift for changes in slit width; also increased default time interval
for detecting ZLP alignment in DM from 5 to 6 seconds. (In 3.6).

3/9/17: Fixed wrong checkboxes showing up in file-saving option dialog for
Falcon (In 3.6).

3/8/17: Fixed transformations used in Navigator to account for tilted images;
basic navigation, polygon montages, and Realign to Item seem to work.

3/8/17: Made the program monitor the beam blanker state for external changes
if there are any FEI cameras, and added a property UpdateBeamBlanker to enable
this otherwise (In 3.6).

3/8/17: Added property BlankDuringTransients to make the program blank the
beam during magnification and spot size changes and lens normalizations to
keep the K2 from retracting due to beam transients (in 3.6).

3/8/17: Added a property KeepEFTEMstate to avoid switching in or out of EFTEM
when the program starts and exits (In 3.6).

3/8/17: Changed color of dose rate and camera name labels to be visible on
noise (In 3.6).

3/8/17: Made it draw navigator label unconditionally if point is more than 40
microns from previous one so labels still show up on low mag maps (In 3.6).

3/6/17: Implemented use of live mode for continous acquisition from DE cameras
and enabled acquisition of normalized images from server.
