@@ -1130,7 +1130,8 @@ void CCameraSetupDlg::ManageCamera()
   int hideForFalcon[] = {IDC_STAT_FRAME_TIME, IDC_EDIT_FRAME_TIME, IDC_STAT_FRAME_SEC,
     IDC_STAT_K2MODE, IDC_BUT_SETUP_ALIGN, IDC_RLINEAR, IDC_RCOUNTING, IDC_RSUPERRES, 
     IDC_ALIGN_DOSE_FRAC, IDC_STAT_ANTIALIAS, IDC_STAT_SAVE_SUMMARY, IDC_SAVE_FRAME_SUMS,
-    IDC_SETUP_K2_FRAME_SUMS, IDC_ALWAYS_ANTIALIAS, IDC_STAT_ALIGN_SUMMARY};
+    IDC_SETUP_K2_FRAME_SUMS, IDC_ALWAYS_ANTIALIAS, IDC_STAT_ALIGN_SUMMARY, 
+    IDC_STAT_WHERE_ALIGN};
   CButton *radio;
   CString strBin;
   CComboBox *combo;
